Start arquillian cube + docker.
But don't deploy war.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,9 @@
 FROM jboss/wildfly
 
+ENV http_proxy http://proxy-idc.carreras.sa:8080
+ENV https_proxy http://proxy-idc.carreras.sa:8080
+ENV no_proxy 127.0.0.1, localhost
+
 RUN /opt/jboss/wildfly/bin/add-user.sh admin Admin#70365 --silent
 
 ADD mysql-connector-java-5.1.30-bin.jar /opt/jboss/wildfly/standalone/deployments/
