--- a/docker_cube/docker-compose.yml
+++ b/docker_cube/docker-compose.yml
@@ -3,23 +3,26 @@ version: '2'
 services:
 
   mysqldb_docker_test:
-    image: mysql:5.7.15
+    containername: mysqldb_docker_test
+    build:
+      context: ./docker_cube/mysql
     volumes:
-      - schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
     ports:
       - 53306:3306
 
   wildfly_docker_test:
-    build: .
-    dockerfile: Dockerfile-wildfly
-    image: jboss/wildfly
+    containername: wildfly_docker_test
+    build:
+      context: ./docker_cube/wildfly
     ports:
       - 58080:8080
+      - 59990:9990
     depends_on:
       - "mysqldb_docker_test"
     volumes:
-      - mysql-connector-java-5.1.30-bin.jar:/opt/jboss/wildfly/standalone/deployments/mysql-connector-java-5.1.30-bin.jar
-      - standalone.xml:/opt/jboss/wildfly/standalone/configuration/standalone.xml
+      - ./mysql-connector-java-5.1.30-bin.jar:/opt/jboss/wildfly/standalone/deployments/mysql-connector-java-5.1.30-bin.jar
+      - ./standalone.xml:/opt/jboss/wildfly/standalone/configuration/standalone.xml
 
 
 
