--- a/pom.xml
+++ b/pom.xml
@@ -49,20 +49,40 @@
     </dependencyManagement>
      
     <dependencies>
-            
+<!--            
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>4.3.1.Final</version>
-            <scope>provided</scope>            
+            <scope>provided</scope>    
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jboss.logging</groupId>
+                    <artifactId>jboss-logging</artifactId>
+                </exclusion>
+            </exclusions>                    
         </dependency>
         
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <version>1.0.0.Final</version>
-            <scope>provided</scope>            
+            <scope>provided</scope>   
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jboss.logging</groupId>
+                    <artifactId>jboss-logging</artifactId>
+                </exclusion>
+            </exclusions>                     
         </dependency>
+-->        
+<!--
+        <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+        </exclusion>
+-->                
+        
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
@@ -85,6 +105,32 @@
             <version>1.0.0.Alpha16</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+          <groupId>org.arquillian.cube</groupId>
+          <artifactId>arquillian-cube-requirement</artifactId>
+          <version>1.0.0.Alpha16</version>
+          <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.arquillian.extension</groupId>
+            <artifactId>arquillian-recorder-reporter-impl</artifactId>
+            <version>1.1.6.Final</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.arquillian.cube</groupId>
+            <artifactId>arquillian-cube-docker-recorder</artifactId>
+            <version>1.0.0.Alpha15</version>
+            <scope>test</scope>
+        </dependency>
+
+        
+
+        
+        
 <!--        
         <dependency>
             <groupId>org.arquillian.cube</groupId>
@@ -116,23 +162,23 @@
             <scope>test</scope>
         </dependency>
         
+                <dependency>
+                        <groupId>xml-apis</groupId>
+                        <artifactId>xml-apis</artifactId>
+                        <version>1.4.01</version>
+                    <scope>test</scope>                
+                </dependency>        
+        -->
+
+
+        <!-- Para hacer deploy en varias versiones de Jboss y Wildfly de forma transparente
         <dependency>
-                <groupId>xml-apis</groupId>
-                <artifactId>xml-apis</artifactId>
-                <version>1.4.01</version>
-            <scope>test</scope>                
-        </dependency>        
--->
-
-
-<!-- Para hacer deploy en varias versiones de Jboss y Wildfly de forma transparente
-<dependency>
-    <groupId>org.arquillian.container</groupId>
-    <artifactId>arquillian-container-chameleon</artifactId>
-    <version>1.0.0.Final-SNAPSHOT</version>
-    <scope>test</scope>
-</dependency>
--->
+            <groupId>org.arquillian.container</groupId>
+            <artifactId>arquillian-container-chameleon</artifactId>
+            <version>1.0.0.Final-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        -->
 
     </dependencies>
     
@@ -214,13 +260,13 @@
             </activation>
             <properties>
                 <maven.test.skip>false</maven.test.skip>
-                <arquillian.launch>wildfly</arquillian.launch>
+                <arquillian.launch>wildfly_docker_test</arquillian.launch>
             </properties>
             <dependencies>
                 <dependency>  
                     <groupId>org.wildfly.arquillian</groupId>  
                     <artifactId>wildfly-arquillian-container-remote</artifactId>  
-                    <version>2.0.2.Final</version>  
+                    <version>2.1.0.Alpha1</version>  
                     <scope>test</scope>
                 </dependency>                  
 
