--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,12 @@
             <scope>test</scope>
         </dependency>
 
-        
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-persistence-dbunit</artifactId>
+            <version>1.0.0.Alpha7</version>
+            <scope>test</scope>
+        </dependency>        
 
         
         
@@ -179,6 +184,7 @@
             <scope>test</scope>
         </dependency>
         -->
+      
 
     </dependencies>
     
