--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <version.javaee_7>1.0.1.Final</version.javaee_7>
         <docker.api.version>1.24</docker.api.version>
         <docker.api.url>tcp://localhost:2375</docker.api.url>
+        <version.arquillian_cube>1.0.0.Alpha16</version.arquillian_cube>        
     </properties>  
     
     <dependencyManagement>
@@ -49,39 +50,6 @@
     </dependencyManagement>
      
     <dependencies>
-<!--            
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>4.3.1.Final</version>
-            <scope>provided</scope>    
-            <exclusions>
-                <exclusion>
-                    <groupId>org.jboss.logging</groupId>
-                    <artifactId>jboss-logging</artifactId>
-                </exclusion>
-            </exclusions>                    
-        </dependency>
-        
-        <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.1-api</artifactId>
-            <version>1.0.0.Final</version>
-            <scope>provided</scope>   
-            <exclusions>
-                <exclusion>
-                    <groupId>org.jboss.logging</groupId>
-                    <artifactId>jboss-logging</artifactId>
-                </exclusion>
-            </exclusions>                     
-        </dependency>
--->        
-<!--
-        <exclusion>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-        </exclusion>
--->                
         
         <dependency>
             <groupId>javax</groupId>
@@ -90,7 +58,6 @@
             <scope>provided</scope>
         </dependency>
 
-    
 
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
@@ -102,14 +69,14 @@
         <dependency>
             <groupId>org.arquillian.cube</groupId>
             <artifactId>arquillian-cube-docker</artifactId>
-            <version>1.0.0.Alpha16</version>
+            <version>${version.arquillian_cube}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
           <groupId>org.arquillian.cube</groupId>
           <artifactId>arquillian-cube-requirement</artifactId>
-          <version>1.0.0.Alpha16</version>
+          <version>${version.arquillian_cube}</version>
           <scope>test</scope>
         </dependency>
 
@@ -123,7 +90,7 @@
         <dependency>
             <groupId>org.arquillian.cube</groupId>
             <artifactId>arquillian-cube-docker-recorder</artifactId>
-            <version>1.0.0.Alpha15</version>
+            <version>${version.arquillian_cube}</version>
             <scope>test</scope>
         </dependency>
 
@@ -134,7 +101,33 @@
             <scope>test</scope>
         </dependency>        
 
+        <dependency>
+             <groupId>org.arquillian.cube</groupId>
+             <artifactId>arquillian-cube-docker-restassured</artifactId>
+             <version>${version.arquillian_cube}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.0.1</version>
+            <scope>test</scope>
+        </dependency>
         
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-path</artifactId>
+            <version>3.0.1</version>
+            <scope>test</scope>    
+        </dependency>        
+        
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+            <scope>test</scope>             
+        </dependency>
         
 <!--        
         <dependency>
