--- a/pom.xml
+++ b/pom.xml
@@ -13,39 +13,32 @@
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <arquillian.cube.autostart />
-        <version.javaee_7>1.0.1.Final</version.javaee_7>
-        <docker.api.version>1.24</docker.api.version>
-        <docker.api.url>tcp://localhost:2375</docker.api.url>
-        <version.arquillian_cube>1.0.0.Alpha16</version.arquillian_cube>        
+
+        <!-- dependency versions -->
+        <javaee-api-version>8.0</javaee-api-version>
+
+
+        <junit-version>4.12</junit-version>
+        <jacoco-version>0.8.3</jacoco-version>
+        <jacoco-plugin-version>0.8.3</jacoco-plugin-version>        
+        
+        
+        <version.arquillian_universe>1.1.13.5</version.arquillian_universe>        
+
+ 
     </properties>  
     
+
+
     <dependencyManagement>
         <dependencies>
-            <!-- Use BOMs to set same versions in all dependencies -->
             <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>1.1.12.Final</version>
-                <type>pom</type>
+                <groupId>org.arquillian</groupId>
+                <artifactId>arquillian-universe</artifactId>
+                <version>${version.arquillian_universe}</version>
                 <scope>import</scope>
-            </dependency>
-<!--            
-            <dependency>
-                <groupId>org.jboss.arquillian.extension</groupId>
-                <artifactId>arquillian-drone-bom</artifactId>
-                <version>2.0.0.Final</version>
                 <type>pom</type>
-                <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>org.jboss.arquillian.selenium</groupId>
-                <artifactId>selenium-bom</artifactId>
-                <version>2.53.1</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
--->            
         </dependencies>
     </dependencyManagement>
      
@@ -54,130 +47,111 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
-            <version>7.0</version>
+            <version>8.0</version>
             <scope>provided</scope>
         </dependency>
 
 
         <dependency>
-            <groupId>org.jboss.arquillian.junit</groupId>
-            <artifactId>arquillian-junit-container</artifactId>
+            <groupId>org.arquillian.universe</groupId>
+            <artifactId>arquillian-junit</artifactId>
             <scope>test</scope>
+            <type>pom</type>
         </dependency>
+        <!--        
+                <dependency>
+                    <groupId>org.arquillian.universe</groupId>
+                    <artifactId>arquillian-junit-standalone</artifactId>
+                    <scope>test</scope>
+                    <type>pom</type>
+                </dependency>        
+        -->
 
-        <!-- Cube dependencies -->
         <dependency>
-            <groupId>org.arquillian.cube</groupId>
+            <groupId>org.arquillian.universe</groupId>
             <artifactId>arquillian-cube-docker</artifactId>
-            <version>${version.arquillian_cube}</version>
             <scope>test</scope>
+            <type>pom</type>
         </dependency>
-
+        <!--
+                <dependency>
+                    <groupId>org.arquillian.universe</groupId>
+                    <artifactId>arquillian-recorder</artifactId>
+                    <scope>test</scope>
+                    <type>pom</type>
+                </dependency>
+        -->
         <dependency>
-          <groupId>org.arquillian.cube</groupId>
-          <artifactId>arquillian-cube-requirement</artifactId>
-          <version>${version.arquillian_cube}</version>
-          <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.arquillian.extension</groupId>
-            <artifactId>arquillian-recorder-reporter-impl</artifactId>
-            <version>1.1.6.Final</version>
+            <groupId>org.arquillian.universe</groupId>
+            <artifactId>arquillian-persistence</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.arquillian.cube</groupId>
-            <artifactId>arquillian-cube-docker-recorder</artifactId>
-            <version>${version.arquillian_cube}</version>
-            <scope>test</scope>
-        </dependency>
-
+            <type>pom</type>
+        </dependency> 
+        
         <dependency>
             <groupId>org.jboss.arquillian.extension</groupId>
-            <artifactId>arquillian-persistence-dbunit</artifactId>
-            <version>1.0.0.Alpha7</version>
+            <artifactId>arquillian-transaction-jta</artifactId>
+            <version>1.0.5</version>
             <scope>test</scope>
-        </dependency>        
+        </dependency>
+                
+        <dependency>
+            <groupId>org.arquillian.universe</groupId>
+            <artifactId>arquillian-jacoco</artifactId>
+            <scope>test</scope>
+            <type>pom</type>
+        </dependency>     
 
         <dependency>
-             <groupId>org.arquillian.cube</groupId>
-             <artifactId>arquillian-cube-docker-restassured</artifactId>
-             <version>${version.arquillian_cube}</version>
+            <groupId>org.jacoco</groupId>
+            <artifactId>org.jacoco.core</artifactId>
+            <version>${jacoco-version}</version>
             <scope>test</scope>
+        </dependency>          
+        
+        <dependency>
+            <groupId>org.arquillian.universe</groupId>
+            <artifactId>arquillian-cube-docker-restassured</artifactId>
+            <scope>test</scope>
+            <type>pom</type>
         </dependency>
 
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>3.0.1</version>
+            <version>3.3.0</version>
             <scope>test</scope>
         </dependency>
         
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>json-path</artifactId>
-            <version>3.0.1</version>
+            <version>3.3.0</version>
             <scope>test</scope>    
         </dependency>        
         
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.0</version>
+            <version>2.8.5</version>
             <scope>test</scope>             
         </dependency>
         
-<!--        
-        <dependency>
-            <groupId>org.arquillian.cube</groupId>
-            <artifactId>arquillian-cube-docker-drone</artifactId>
-            <version>1.0.0.Alpha16</version>
-            <scope>test</scope>
-        </dependency>
--->        
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.5.2</version>
+            <version>3.12.1</version>
             <scope>test</scope>
         </dependency>
         
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
         
-        <!-- Drone dependencies -->
-<!--        
-        <dependency>
-            <groupId>org.jboss.arquillian.extension</groupId>
-            <artifactId>arquillian-drone-webdriver-depchain</artifactId>
-            <type>pom</type>
-            <scope>test</scope>
-        </dependency>
-        
-                <dependency>
-                        <groupId>xml-apis</groupId>
-                        <artifactId>xml-apis</artifactId>
-                        <version>1.4.01</version>
-                    <scope>test</scope>                
-                </dependency>        
-        -->
 
-
-        <!-- Para hacer deploy en varias versiones de Jboss y Wildfly de forma transparente
-        <dependency>
-            <groupId>org.arquillian.container</groupId>
-            <artifactId>arquillian-container-chameleon</artifactId>
-            <version>1.0.0.Final-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-        -->
-      
 
     </dependencies>
     
