--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <jacoco-plugin-version>0.8.3</jacoco-plugin-version>        
         
         
-        <version.arquillian_universe>1.1.13.5</version.arquillian_universe>        
+        <version.arquillian_universe>1.2.0.1</version.arquillian_universe>        
 
  
     </properties>  
@@ -47,9 +47,16 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
-            <version>8.0</version>
+            <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>  
+            <groupId>org.wildfly.arquillian</groupId>  
+            <artifactId>wildfly-arquillian-container-remote</artifactId>  
+            <version>2.1.1.Final</version>  
+            <scope>test</scope>
+        </dependency>   
 
 
         <dependency>
@@ -92,7 +99,7 @@
             <groupId>org.jboss.arquillian.extension</groupId>
             <artifactId>arquillian-transaction-jta</artifactId>
             <version>1.0.5</version>
-            <scope>test</scope>
+            <scope>test</scope> 
         </dependency>
                 
         <dependency>
